debugging_lab/pod_network/scenario-02/service-c.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-c
spec:
  selector:
    app: pod-c
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
