debugging_lab/pod_network/scenario-02/deny-all-to-pod-a.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-to-pod-a
spec:
  podSelector:
    matchLabels:
      app: pod-a
  policyTypes:
  - Ingress
  ingress: []
